[package]
name = "code-challenge-game-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
druid = { git = "https://github.com/linebender/druid.git", features=["im"] }
dyn-clone = "1.0.11"
itertools = "0.10.5"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

